[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-vm-sdk"
version = "0.1.0"
description = "Python SDK for provisioning and managing Agent VMs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Agent SDK Maintainers" }]
dependencies = [
  "httpx>=0.27.0",
]
keywords = ["agent", "sdk", "vm", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
openai-agents = ["openai-agents>=0.0.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_vm_sdk = ["py.typed"]
